# docker-wickworks

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  schema.json
.github/workflows/: collaborators-only.yml  pipeline.yml
scripts/: bump_exclude_newer.sh
src/wickworks/: __init__.py  common.py  compute.py  config.py  metadata.py  registry.py  requirements.py  schemas.py  server.py  smc.py  smc_fast.py
src/wickworks/indicators/: __init__.py  _helpers.py  momentum_adx.py  momentum_macd.py  momentum_mfi.py  momentum_rsi.py  momentum_stochastic.py  overextension.py  price_action_donchian.py  price_action_swing_structure.py  price_action_vwap.py  smc.py  trend_moving_averages.py  volatility_atr.py  volatility_bollinger.py  volume_analysis.py
src/wickworks/signals/: __init__.py  _helpers.py  div_trend.py  divergences.py
tests/: _helpers.py  conftest.py  test_adx.py  test_append_only.py  test_aroon.py  test_atr.py  test_bbands.py  test_cci.py  test_common.py  test_determinism.py  test_divergences.py  test_docker.py  test_donchian.py  test_errors.py  test_fvg.py  test_ichimoku.py  test_isolation.py  test_kc.py  test_macd.py  test_metadata.py  test_moving_averages.py  test_obv.py  test_psar.py  test_response_envelope.py  test_roc.py  test_rsi.py  test_server.py  test_smc_analyze.py  test_smc_fast_parity.py  test_smc_outputs.py  test_stoch.py  test_summaries.py  test_supertrend.py  test_volume_aliasing.py  test_vortex.py  test_vwap.py  test_warmup.py  test_willr.py
tests/fixtures/: eurusd_h1.json
