[project]
name = "wickworks"
version = "0.3.0"
description = "Stateless OHLC primitives service — bars in, indicators + SMC objects out."
readme = "README.md"
license = { text = "WTFPL" }
requires-python = ">=3.12"
authors = [{ name = "psyb0t" }]
keywords = [
    "smart-money-concepts",
    "smc",
    "technical-analysis",
    "technical-indicators",
    "order-blocks",
    "fair-value-gap",
    "fvg",
    "ict",
    "trading",
    "ohlc",
    "candlestick",
    "fastapi",
    "quant",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "pydantic==2.13.3",
    "pandas==3.0.2",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "numba==0.65.1",
    "numpyencoder==0.3.2",
    "pyyaml==6.0.3",
    "python-dateutil==2.9.0.post0",
    "tqdm==4.67.1",
]

[project.urls]
Homepage = "https://github.com/psyb0t/wickworks"
Issues = "https://github.com/psyb0t/wickworks/issues"

# NOTE: pandas-ta==0.4.71b0 and smartmoneyconcepts==0.0.26 are required at
# runtime but pin conflicting transitive deps (numba). They are installed
# without dependency resolution via `make ta-install` (see Makefile) and the
# Dockerfile. Do not add them to [project.dependencies].

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-cov==5.0.0",
    "httpx==0.28.1",
    "black==24.10.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "mypy==1.13.0",
    "testcontainers==4.14.2",
    "requests==2.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wickworks"]

[tool.uv]
# Supply-chain defense: only install pkg versions older than `exclude-newer`.
# Bumped automatically by `make pkg-*` targets; do not hand-edit unless you
# know what you're doing. Date is interpreted as UTC midnight of that day.
exclude-newer = "2026-05-13T00:00:00Z"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not docker'"
markers = [
    "docker: integration tests that build + run the docker image (opt-in: pytest -m docker)",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
